--- a/src/index.css
+++ b/src/index.css
@@ -1,64 +1,91 @@
-/* Container for steps */
-.steps-container {
-  text-align: center;
-  margin-top: 50px;
-  font-family: Arial, sans-serif;
+* {
+  box-sizing: border-box;
 }
 
-/* Step numbers container */
-.number-container {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-  margin-bottom: 20px;
-}
-
-/* Step numbers */
-.step-number {
-  border: 2px solid #ccc;
-  border-radius: 50%;
-  width: 40px;
-  height: 40px;
-  line-height: 40px;
-  text-align: center;
-  font-weight: bold;
+body {
+  font-family: sans-serif;
   color: #333;
 }
 
-/* Active step styling */
-.step-number.active {
-  border-color: #7950f2;
-  color: #fff;
-  background-color: #7950f2;
+.steps {
+  width: 600px;
+  background-color: #f7f7f7;
+  border-radius: 7px;
+  padding: 25px 100px;
+  margin: 100px auto;
 }
 
-/* Step message */
-.step-message {
-  font-size: 20px;
-  margin: 20px 0;
-}
-
-/* Button container */
-.button-container {
+.numbers {
   display: flex;
+  justify-content: space-between;
+}
+
+.numbers > div {
+  height: 40px;
+  aspect-ratio: 1;
+  background-color: #e7e7e7;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
   justify-content: center;
+  font-size: 18px;
+}
+
+.numbers .active {
+  background-color: #7950f2;
+  color: #fff;
+}
+
+.message {
+  text-align: center;
+  font-size: 20px;
+  margin: 40px 0;
+  font-weight: bold;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.buttons {
+  display: flex;
+  justify-content: space-between;
+}
+
+.buttons button {
+  border: none;
+  cursor: pointer;
+  padding: 10px 15px;
+  border-radius: 100px;
+  font-size: 14px;
+  font-weight: bold;
+
+  display: flex;
+  align-items: center;
   gap: 10px;
 }
 
-/* Buttons */
-.button {
-  background-color: #7950f2;
-  color: #fff;
-  border: none;
-  padding: 10px 20px;
+.buttons button span {
   font-size: 16px;
-  border-radius: 5px;
+  line-height: 1;
+}
+
+h3 {
+  margin: 0;
+  text-transform: uppercase;
+}
+
+.close {
+  /* position: absolute; */
+  top: 16px;
+  right: 16px;
+  border: none;
+  background: none;
   cursor: pointer;
-  transition: background-color 0.3s;
+  font-size: 40px;
+  color: inherit;
 }
 
-.button:disabled {
-  background-color: #ccc;
-  cursor: not-allowed;
+.close:hover {
+  color: #7950f2;
 }
-
